--- a/package.json
+++ b/package.json
@@ -23,30 +23,30 @@
     "IE 11"
   ],
   "devDependencies": {
-    "browser-sync": "^2.26.5",
-    "browserify": "^16.2.3",
-    "del": "^4.1.1",
-    "gulp": "github:gulpjs/gulp#6d71a65",
-    "gulp-autoprefixer": "^6.1.0",
+    "browser-sync": "^2.27.7",
+    "browserify": "^17.0.0",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-cached": "^1.1.1",
-    "gulp-cheerio": "^0.6.3",
+    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
-    "gulp-csso": "^3.0.1",
-    "gulp-eslint": "^5.0.0",
+    "gulp-csso": "^4.0.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^6.0.0",
-    "gulp-load-plugins": "^1.6.0",
+    "gulp-load-plugins": "^2.0.7",
     "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-pngquant": "^1.0.12",
+    "gulp-notify": "^4.0.0",
+    "gulp-pngquant": "^1.0.13",
     "gulp-prettify": "^0.5.0",
-    "gulp-pug": "^4.0.1",
-    "gulp-replace": "^1.0.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-uglify-es": "^1.0.4",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-uglify-es": "^3.0.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
